--- a/index.html
+++ b/index.html
@@ -3,5 +3,4 @@ layout: default
 title: Ananye Pandey
 ---
 
-[Contact][reference-id-for-contact]
-[reference-id-for-contact]: ap3885.github.io/about/contact/
+<a href="/about/contact">Contact</a>
