--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 description: Resume
+permalink: /about/resume/
 ---
 
 <embed src="https://ap3885.github.io/Resume_AnanyePandey_July2020.pdf" type="application/pdf" />
