--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ description: Welcome to my website! Please feel free to check out my projects an
 ---
 
 <a href="/about/contact">Contact</a>
+<a href="/about/resume">Resume</a>
