--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Ananye Pandey
 description: Welcome to my website! Please feel free to check out my projects and details! 
 ---
+<img src = "/myself.jpg" alt="high" class="inline"/>
 
 <a href="/about/contact">Contact</a>
 <br>
