try to center image 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@ layout: default
 title: Ananye Pandey
 description: Welcome to my website! Please feel free to check out my projects and details! 
 ---
-<img src = "/myself.jpg" alt="hi" class="inline" width=400 height=600/>
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+<img src = "/myself.jpg" alt="hi" class="center" width=250 height=400/>
 <br>
 <a href="/about/contact">Contact</a>
 <br>
