--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@ title: Ananye Pandey
 description: Welcome to my website! Please feel free to check out my projects and details! 
 ---
 
-.center {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
-<img src = "/myself.jpg" alt="hi" class="center" width=250 height=400/>
+
+<img src = "/myself.jpg" alt="hi" width=250 height=400/>
 <br>
 <a href="/about/contact">Contact</a>
 <br>
