--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@ title: Ananye Pandey
 description: Welcome to my website! Please feel free to check out my projects and details! 
 ---
 
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
+<center>
 <img src = "/myself.jpg" alt="hi" width=250 height=300/>
+</center>
 <br>
 <a href="/about/contact">Contact</a>
 <br>
