--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@ layout: default
 title: Ananye Pandey
 description: Welcome to my website! Please feel free to check out my projects and details! 
 ---
+<style>
+img {
+  border-radius: 50%;
+}
+</style>
 
 <center>
-<img src = "/myself.jpg" alt="hi" width=250 height=300/>
+<img src = "/myself.jpg" alt="hi" width=250 height=350/>
 </center>
 <br>
 <a href="/about/contact">Contact</a>
