--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: Projects
-permalink: /project/
+permalink: /projects/
 ---
 
 <a href="www.github.com/ap3885/street_view_imagery"/>1. Street View Number Recognition:</a> <br>
