remove extra links

--- a/index.html
+++ b/index.html
@@ -13,6 +13,5 @@ img {
 <img src = "/myself.jpg" alt="hi" width=350 height=350/>
 </center>
 <br>
-<a href="/about/contact">Contact</a>
-<br>
-<a href="/about/resume">Resume</a>
+<a href="www.github.com/ap3885">View GitHub Profile</a>
+
