--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,6 @@ description: Projects
 permalink: /projects/
 ---
 
-<a href="httep://www.github.com/ap3885/street_view_imagery/"/>1. Street View Number Recognition:</a> <br>
+<a href="httep://github.com/ap3885/street_view_imagery/"/>1. Street View Number Recognition:</a> <br>
 This project implements a convolutional neural network created to match human accuracy in predicting numbers from street view images of house numbers on Python, Tensorflow.
 <br>
