--- a/projects.html
+++ b/projects.html
@@ -7,3 +7,7 @@ permalink: /projects/
 <a href="https://github.com/ap3885/street_view_imagery"/>1. Street View Number Recognition:</a> <br>
 This project implements a convolutional neural network created to match human accuracy in predicting numbers from street view images of house numbers on Python, Tensorflow.
 <br>
+<br>
+<a href+"httpe://github.com/ap3885/pycuda-svd"/>2. CUDA implementation of Singular Value Decomposition:</a><br>
+This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
+<br>
