--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,6 @@ permalink: /projects/
 This project implements a convolutional neural network created to match human accuracy in predicting numbers from street view images of house numbers on Python, Tensorflow.
 <br>
 <br>
-<a href+"httpe://github.com/ap3885/pycuda-svd"/>2. CUDA implementation of Singular Value Decomposition:</a><br>
+<a href="https://github.com/ap3885/pycuda-svd"/>2. CUDA implementation of Singular Value Decomposition:</a><br>
 This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
 <br>
