added svd report link

--- a/projects.html
+++ b/projects.html
@@ -11,3 +11,4 @@ This project implements a convolutional neural network created to match human ac
 <a href="https://github.com/ap3885/pycuda-svd"/>2. CUDA implementation of Singular Value Decomposition:</a><br>
 This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
 <br>
+<a href="https://github.com/ap3885/pycuda-svd/blob/master/E4750.2019Fall.JPCA.ap3885.dso2119.report.pdf"/>Report</a>
