added street view pdf link

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@ permalink: /projects/
 <a href="https://github.com/ap3885/street_view_imagery"/>1. Street View Number Recognition:</a> <br>
 This project implements a convolutional neural network created to match human accuracy in predicting numbers from street view images of house numbers on Python, Tensorflow.
 <br>
+<a href="https://github.com/ap3885/street_view_imagery/blob/master/e4040-2019fall-project-mdnr-ap3885-as5697-master-2/E4040.2019Fall.MDNR.report.ap3885.as5697.pdf"/>Report</a>
+<br>
 <br>
 <a href="https://github.com/ap3885/pycuda-svd"/>2. CUDA implementation of Singular Value Decomposition:</a><br>
 This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
