--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,10 @@ permalink: /projects/
 <a href="https://github.com/ap3885/street_view_imagery/" target="_blank">1. Street View Number Recognition:</a> <br>
 This project implements a convolutional neural network created to match human accuracy in predicting numbers from street view images of house numbers on Python, Tensorflow.
 <br>
-<a href="https://github.com/ap3885/street_view_imagery/blob/master/e4040-2019fall-project-mdnr-ap3885-as5697-master-2/E4040.2019Fall.MDNR.report.ap3885.as5697.pdf"/>Report</a>
+<a href="https://github.com/ap3885/street_view_imagery/blob/master/e4040-2019fall-project-mdnr-ap3885-as5697-master-2/E4040.2019Fall.MDNR.report.ap3885.as5697.pdf"  target="_blank">Report</a>
 <br>
 <br>
-<a href="https://github.com/ap3885/pycuda-svd"/>2. CUDA implementation of Singular Value Decomposition:</a><br>
+<a href="https://github.com/ap3885/pycuda-svd"  target="_blank">2. CUDA implementation of Singular Value Decomposition:</a><br>
 This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
 <br>
 <a href="https://github.com/ap3885/pycuda-svd/blob/master/E4750.2019Fall.JPCA.ap3885.dso2119.report.pdf" target="_blank">Report</a>
