--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,13 @@ This project implements a convolutional neural network created to match human ac
 <a href="https://github.com/ap3885/street_view_imagery/blob/master/e4040-2019fall-project-mdnr-ap3885-as5697-master-2/E4040.2019Fall.MDNR.report.ap3885.as5697.pdf"  target="_blank">Report</a>
 <br>
 <br>
-<a href="https://github.com/ap3885/pycuda-svd"  target="_blank">2. CUDA implementation of Singular Value Decomposition:</a><br>
+<a href="https://github.com/ap3885/pycuda-svd"  target="_blank">2. CUDA Implementation of Singular Value Decomposition:</a><br>
 This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
 <br>
 <a href="https://github.com/ap3885/pycuda-svd/blob/master/E4750.2019Fall.JPCA.ap3885.dso2119.report.pdf" target="_blank">Report</a>
+<br>
+<br>
+<a href="https://github.com/ap3885/Statistical-Inference-R/" target="_blank">3. Breast Cancer Detection using common Machine Learning (Statistical Inference) Methods:</a><br>
+I implemented a variety of common Machine Learning Methods like regression and clustering to detect breast cancer using the Wisconsin Breat Cancer dataset on R.
+<br>
+<a href="https://github.com/ap3885/Statistical-Inference-R/blob/master/E6690.ap3885.report.pdf" target="_blank">Report</a>
