--- a/projects.html
+++ b/projects.html
@@ -20,3 +20,8 @@ This project explores the usage of Jacobi method of eigenvalue-eignevector decom
 I implemented a variety of common Machine Learning Methods like regression and clustering to detect breast cancer using the Wisconsin Breat Cancer dataset on R.
 <br>
 <a href="https://github.com/ap3885/Statistical-Inference-R/blob/master/E6690.ap3885.report.pdf" target="_blank">Report</a>
+<br>
+<br>
+<a href="https://github.com/ap3885/wids2020hackathon/" target="_blank">3. ICU Mortality using common Machine Learning Methods:</a><br>
+This repository contains the code used to predict multi-hospital ICU mortality within the first 24 hours of admission, which helped us achieve a rank in the top 20% of the Kaggle 
+Competition organized by Women in Data Science (WiDS)
