Updated description of WIDS

--- a/projects.html
+++ b/projects.html
@@ -17,11 +17,11 @@ This project explores the usage of Jacobi method of eigenvalue-eignevector decom
 <br>
 <br>
 <a href="https://github.com/ap3885/Statistical-Inference-R/" target="_blank">3. Breast Cancer Detection using common Machine Learning (Statistical Inference) Methods:</a><br>
-I implemented a variety of common Machine Learning Methods like regression and clustering to detect breast cancer using the Wisconsin Breat Cancer dataset on R.
+I implemented a variety of common Machine Learning (ML) algorithms like regression and clustering to detect breast cancer using the Wisconsin Breat Cancer dataset on R.
 <br>
 <a href="https://github.com/ap3885/Statistical-Inference-R/blob/master/E6690.ap3885.report.pdf" target="_blank">Report</a>
 <br>
 <br>
 <a href="https://github.com/ap3885/wids2020hackathon/" target="_blank">3. ICU Mortality using common Machine Learning Methods:</a><br>
-This repository contains the code used to predict multi-hospital ICU mortality within the first 24 hours of admission, which helped us achieve a rank in the top 20% of the Kaggle 
-Competition organized by Women in Data Science (WiDS)
+This repository contains the code used to predict multi-hospital ICU mortality within the first 24 hours of admission by Stacking various ML algorithms in R, which helped us achieve a rank in the top 20% of the Kaggle 
+Competition organized by Women in Data Science (WiDS).
