edited view github link

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ img {
 <img src = "/myself.jpg" alt="hi" width=350 height=350/>
 </center>
 <br>
-<a href="www.github.com/ap3885">View GitHub Profile</a>
+<a href="https://github.com/ap3885">View GitHub Profile</a>
 
