--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,12 @@ I implemented a variety of common Machine Learning (ML) algorithms like regressi
 <a href="https://github.com/ap3885/Statistical-Inference-R/blob/master/E6690.ap3885.report.pdf" target="_blank">Report</a>
 <br>
 <br>
-<a href="https://github.com/ap3885/wids2020hackathon/" target="_blank">3. ICU Mortality using common Machine Learning Methods:</a><br>
+<a href="https://github.com/ap3885/Multi-Agent-Flocking/"  target="_blank">4. Leaderless Multi-Agent Flocking:</a><br>
+MATLAB implementation of a Leaderless Multi-Agent System flocking in fixed and switching network for Autonomous Multi-Agent Systems class.
+<br>
+<a href="https://github.com/ap3885/Multi-Agent-Flocking/blob/master/E6899_Report.pdf" target="_blank">Report</a>
+<br>
+<br>
+<a href="https://github.com/ap3885/wids2020hackathon/" target="_blank">5. ICU Mortality using common Machine Learning Methods:</a><br>
 This repository contains the code used to predict multi-hospital ICU mortality within the first 24 hours of admission by Stacking various ML algorithms in R, which helped us achieve a rank in the top 20% of the Kaggle 
 Competition organized by Women in Data Science (WiDS).
