--- a/projects.html
+++ b/projects.html
@@ -7,25 +7,25 @@ permalink: /projects/
 <a href="https://github.com/ap3885/street_view_imagery/" target="_blank">1. Street View Number Recognition:</a> <br>
 This project implements a convolutional neural network created to match human accuracy in predicting numbers from street view images of house numbers on Python, Tensorflow.
 <br>
-<a href="https://github.com/ap3885/street_view_imagery/blob/master/e4040-2019fall-project-mdnr-ap3885-as5697-master-2/E4040.2019Fall.MDNR.report.ap3885.as5697.pdf"  target="_blank">Report</a>
+<a href="https://github.com/ap3885/street_view_imagery/blob/master/e4040-2019fall-project-mdnr-ap3885-as5697-master-2/E4040.2019Fall.MDNR.report.ap3885.as5697.pdf"  target="_blank">Project Report</a>
 <br>
 <br>
 <a href="https://github.com/ap3885/pycuda-svd"  target="_blank">2. CUDA Implementation of Singular Value Decomposition:</a><br>
 This project explores the usage of Jacobi method of eigenvalue-eignevector decomposition and its parallelized implementation on CUDA using PyCuda on Python.
 <br>
-<a href="https://github.com/ap3885/pycuda-svd/blob/master/E4750.2019Fall.JPCA.ap3885.dso2119.report.pdf" target="_blank">Report</a>
+<a href="https://github.com/ap3885/pycuda-svd/blob/master/E4750.2019Fall.JPCA.ap3885.dso2119.report.pdf" target="_blank">Project Report</a>
 <br>
 <br>
 <a href="https://github.com/ap3885/Statistical-Inference-R/" target="_blank">3. Breast Cancer Detection using common Machine Learning (Statistical Inference) Methods:</a><br>
 I implemented a variety of common Machine Learning (ML) algorithms like regression and clustering to detect breast cancer using the Wisconsin Breat Cancer dataset on R.
 <br>
-<a href="https://github.com/ap3885/Statistical-Inference-R/blob/master/E6690.ap3885.report.pdf" target="_blank">Report</a>
+<a href="https://github.com/ap3885/Statistical-Inference-R/blob/master/E6690.ap3885.report.pdf" target="_blank">Project Report</a>
 <br>
 <br>
 <a href="https://github.com/ap3885/Multi-Agent-Flocking/"  target="_blank">4. Leaderless Multi-Agent Flocking:</a><br>
 MATLAB implementation of a Leaderless Multi-Agent System flocking in fixed and switching network for Autonomous Multi-Agent Systems class.
 <br>
-<a href="https://github.com/ap3885/Multi-Agent-Flocking/blob/master/E6899_Report.pdf" target="_blank">Report</a>
+<a href="https://github.com/ap3885/Multi-Agent-Flocking/blob/master/E6899_Report.pdf" target="_blank">Project Report</a>
 <br>
 <br>
 <a href="https://github.com/ap3885/wids2020hackathon/" target="_blank">5. ICU Mortality using common Machine Learning Methods:</a><br>
