added final sem undergrad internship

--- a/internships.html
+++ b/internships.html
@@ -3,3 +3,7 @@ layout: default
 description: Internships
 permalink: /internships/
 ---
+
+1. OSRAM Opto Semiconductors:<br>
+March - July 2019, OSRAM Opto Semiconductors,4 Leibnizstr., 93055 Regensburg, Germany <br>
+<a href="https://github.com/ap3885/internships/blob/master/FinalReport_140907458.pdf" target="_blank">Internship Report</a><br>
