added description for final sem internship

--- a/internships.html
+++ b/internships.html
@@ -6,4 +6,6 @@ permalink: /internships/
 
 1. OSRAM Opto Semiconductors:<br>
 March - July 2019, OSRAM Opto Semiconductors,4 Leibnizstr., 93055 Regensburg, Germany <br>
+I did my final semester undergraduate internship at OSRAM Opto Semiconductors. In my role there, I implemented a high current laser testing system with better performance against noise
+by using signal processing techniques and thereby reduced overall testing time.
 <a href="https://github.com/ap3885/internships/blob/master/FinalReport_140907458.pdf" target="_blank">Internship Report</a><br>
