view github profile in new tab

--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@ Learning, Deep Learning, Parallel and Heterogeneous computing, Distributed compu
 have spent my childhood playing and competing till the national level. I also love exploring new places and cuisines and rock concerts!
 <br>
 <br>
-<a href="https://github.com/ap3885">View GitHub Profile</a>
+<a href="https://github.com/ap3885" target="_blank">View GitHub Profile</a>
 
