added 2017 osram summer internship

--- a/internships.html
+++ b/internships.html
@@ -5,7 +5,15 @@ permalink: /internships/
 ---
 
 1. OSRAM Opto Semiconductors:<br>
-March - July 2019, OSRAM Opto Semiconductors,4 Leibnizstr., 93055 Regensburg, Germany <br>
+March - July 2018, OSRAM Opto Semiconductors,4 Leibnizstr., 93055 Regensburg, Germany <br>
 I did my final semester undergraduate internship at OSRAM Opto Semiconductors. In my role there, I implemented a high current laser testing system with better performance against noise
 by using signal processing techniques and thereby reduced overall testing time.
+<br>
 <a href="https://github.com/ap3885/internships/blob/master/FinalReport_140907458.pdf" target="_blank">Internship Report</a><br>
+<br>
+2. OSRAM Opto Semiconductors:<br>
+June - July 2017, OSRAM Opto Semiconductors, Sunnyvale, California <br>
+In the summer of 2017, I interned at OSRAM OS in California working to improve infrared dectecting sensors for various client projects. I was also in charge of characterizing heart-rate 
+monitoring diodes using Labview.
+<br>
+<a href="https://github.com/ap3885/internships/blob/master/Internship2017_AnanyePandey.pdf" target=_blank">Internship Report</a><br>
