Updated Resume name

--- a/resume.html
+++ b/resume.html
@@ -4,4 +4,4 @@ description: Resume
 permalink: /about/resume/
 ---
 
-<embed src="https://ap3885.github.io/Resume_AnanyePandey_July2020.pdf" width="720px" height="1200px" />
+<object src="https://ap3885.github.io/Resume_AnanyePandey_Sept2020.pdf" width="720px" height="1200px" />
