--- a/resume.html
+++ b/resume.html
@@ -4,4 +4,4 @@ description: Resume
 permalink: /about/resume/
 ---
 
-<object src="https://ap3885.github.io/Resume_AnanyePandey_Sept2020.pdf" width="720px" height="1200px" />
+<object width="720px" height="1200px data="https://ap3885.github.io/Resume_AnanyePandey_Sept2020.pdf" " />
