--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ img {
 <img src = "/myself.jpg" alt="hi" width=350 height=350/>
 </center>
 <br>
-Hello! I am a final year Electrical Engineering graduate student at Columbia University aspiring to have my PhD right after. My current focus areas and research interests are in Machine
+Hello! I am a final year Electrical Engineering graduate student at Columbia University aspiring to have my PhD eventually. My current focus areas and research interests are in Machine
 Learning, Deep Learning, Parallel and Heterogeneous computing, Distributed computing and Blockchain. In my free time (and if not, i try to make time for) soccer! I'm an avid follower and
 have spent my childhood playing and competing till the national level. I also love exploring new places and cuisines and rock concerts!
 <br>
