--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 description: Projects
 permalink: /projects/
 ---
-<a href="https://github.com/ap3885/ap3885.github.io/blob/master/iot_website/index.html" target="_blank">1. IOT Connected Smart Lock System:</a> <br>
+<a href="https://htmlpreview.github.io/?https://github.com/ap3885/ap3885.github.io/blob/master/iot_website/index.html" target="_blank">1. IOT Connected Smart Lock System:</a> <br>
 We use 2 ESP 8266 microcontrollers as webservers controlled via a smartphone app. This project was done as the IOT E4764 course project at Columbia University.
 <br>
 <br>
