--- a/resume.html
+++ b/resume.html
@@ -4,4 +4,8 @@ description: Resume
 permalink: /about/resume/
 ---
 
-<object width="720px" height="1200px" data="https://ap3885.github.io/Resume_AnanyePandey_Jan2021.pdf"/>
+<object data="https://ap3885.github.io/Resume_AnanyePandey_Jan2021.pdf" type="application/pdf" width="720px" height="1200px">
+  <p>Your web browser doesn't have a PDF plugin.
+  Instead you can <a href="https://ap3885.github.io/Resume_AnanyePandey_Jan2021.pdf">click here to
+  download the PDF file.</a></p>
+</object>
