--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Ananye Pandey
+description: Welcome to my website! Please feel free to check out my projects and details! 
 ---
 <style>
 img {
